# mephi_lab3

./: .gitignore  CMakeLists.txt  DynamicArray.h  LinkedList.h  SequenceOperations.cpp  SequenceOperations.h  main.cpp  menu.cpp  menu.h  my_except.h  scanValues.cpp  scanValues.h
Sequences/: ArraySequence.h  BitSequence.h  ImmutableArraySequence.h  ImmutableListSequence.h  ListSequence.h  MutableArraySequence.h  MutableListSequence.h  Sequence.h
core/: DynamicArray.h  LinkedList.h
core/Sequences/: BitSequence.h  ICollection.h  ImmutableArraySequence.h  ImmutableListSequence.h  MutableArraySequence.h  MutableListSequence.h  Sequence.h
tests/: test.cpp  testArraySequence.cpp  testBitSequence.cpp  testDynamicArray.cpp  testICollection.cpp  testImmutable.cpp  testLinkedList.cpp  testListSequence.cpp  testMutable.cpp
